<resources>
    <string name="app_name">FitCore Pro</string>
    <string name="inicio">Início</string>
    <string name="treino">Treino</string>
    <string name="dieta">Dieta</string>
    <string name="about_us">Sobre Nós</string>
    <string name="about">Sobre</string>
    <string name="exercicio">Exercícios</string>
    <string name="series">Séries</string>
    <string name="hoje">Hoje</string>
    <string name="monday">Seg</string>
    <string name="tuesday">Ter</string>
    <string name="wednesday">Qua</string>
    <string name="thursday">Qui</string>
    <string name="friday">Sex</string>
    <string name="saturday">Sáb</string>
    <string name="sunday">Dom</string>
    <string name="plano_semanal">Plano Semanal</string>
    <string name="title_week_plan_diet">Plano Semanal 01</string>
    <string name="novo_plano">Novo Plano</string>
    <string name="cadastro_plano_semanal">Cadastro Plano Semanal</string>
    <string name="header_plano_semanal">Planeje sua alimentação semanal</string>
    <string name="cadastrar">cadastrar</string>
</resources>