<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/nav_home"
    android:id="@+id/mobile_navigation">

    <fragment android:id="@+id/nav_home"
        android:label="@string/inicio"
        android:name="com.app.fitcorepro.view.HomeFragment"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_treino"
        android:label="@string/treino"
        android:name="com.app.fitcorepro.view.TreinoFragment"
        tools:layout="@layout/fragment_treino"/>

    <fragment
        android:id="@+id/nav_diet"
        android:label="@string/dieta"
        android:name="com.app.fitcorepro.view.DietaFragment"
        tools:layout="@layout/fragment_refeicao">
        <action
            android:id="@+id/action_nav_diet_to_nav_diet_week"
            app:destination="@id/nav_diet_week" />
    </fragment>

    <fragment android:id="@+id/nav_diet_week"
        android:label="@string/plano_semanal"
        android:name="com.app.fitcorepro.view.PlanoSemanalFragment"
        tools:layout="@layout/fragment_plano_semanal">
        <action
            android:id="@+id/action_nav_diet_week_to_nav_new_plan_week"
            app:destination="@id/nav_new_plan_week" />
    </fragment>

    <fragment android:id="@+id/nav_new_plan_week"
        android:label="@string/cadastro_plano_semanal"
        android:name="com.app.fitcorepro.view.CadastroPlanoSemanalFragment"
        tools:layout="@layout/fragment_cadastro_novo_plano_semanal"/>


</navigation>